# api/swagger.yml
@@ -35,6 +35,8 @@ paths:
             type: array
             items:
               $ref: '#/definitions/Account'
+        204:
+          description: No accounts
         500:
           description: Oh no! Unexpected error occurred. Please, report the error.
     post:
@@ -98,6 +100,8 @@ paths:
           description: Account updated
         400:
           description: Invalid input
+        404:
+          description: Account not found
         409:
           description: The request was valid but Cashier was not in the appropriate state to process it. Retrying the same request later may be successful
         500:
@@ -135,6 +139,10 @@ paths:
             type: array
             items:
               $ref: '#/definitions/Transaction'
+        204:
+          description: No transactions
+        404:
+          description: Account not found
         500:
           description: Oh no! Unexpected error occurred. Please, report the error.
     post:
@@ -158,6 +166,8 @@ paths:
           description: Transaction created
         400:
           description: Invalid input
+        404:
+          description: Account not found
         500:
           description: Oh no! Unexpected error occurred. Please, report the error.
   /accounts/{accountId}/transactions/{transactionId}:
@@ -187,6 +197,8 @@ paths:
           description: Transaction updated
         400:
           description: Invalid input
+        404:
+          description: Account not found
         500:
           description: Oh no! Unexpected error occurred. Please, report the error.
     delete:
@@ -207,6 +219,8 @@ paths:
       responses:
         204:
           description: Transaction deleted
+        404:
+          description: Account not found
         500:
           description: Oh no! Unexpected error occurred. Please, report the error.
 
